--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,4 @@
-﻿@import "variables-local";
-
-// Variables bootstrap.
-@import "variables-bs";
-@import "variables-bs-dark";
+﻿@import "variables";
 
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
