--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,14 @@
     <ng-scrollbar>
       <div class="sidebar-profile">
         <div class="user-pic">
-          <img class="img-responsive img-rounded" src="assets/images/user.jpg" alt="User picture" />
+          <img
+            [ngClass]="{
+              'time-state-open': currentTimeControlState() === timeStates.open,
+              'time-state-close': currentTimeControlState() === timeStates.close
+            }"
+            class="img-responsive img-rounded"
+            src="assets/images/user.jpg"
+            alt="User picture" />
         </div>
 
         <div class="user-info">
