--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,4 +1,4 @@
-@import "variables-local";
+@import "variables";
 
 $color-icon: "#aaaaaa";
 
@@ -9,40 +9,4 @@ label {
 .form-control:focus {
   border-color: $primary;
   box-shadow: none !important;
-}
-
-.has-icon {
-  .has-icon-left {
-    color: $color-icon;
-    display: block;
-    height: 2.375rem;
-    line-height: 2.375rem;
-    pointer-events: none;
-    position: absolute;
-    text-align: center;
-    width: 2.375rem;
-    z-index: 4;
-
-    + .form-control {
-      padding-left: 2.375rem;
-    }
-  }
-
-  .has-icon-right {
-    color: $color-icon;
-    display: block;
-    height: 2.375rem;
-    line-height: 2.175rem;
-    pointer-events: none;
-    position: absolute;
-    right: -2px;
-    text-align: center;
-    width: 2.375rem;
-    z-index: 4;
-    opacity: 0.4;
-
-    + .form-control {
-      padding-right: 2.375rem;
-    }
-  }
 }
