--- a/src/app/components/progress/progress-stacked/progress-stacked.component.html
+++ b/src/app/components/progress/progress-stacked/progress-stacked.component.html
@@ -4,7 +4,7 @@
 
 <div class="progress-stacked mb-2">
   <div
-    *ngFor="let item of progressStackedCollection.progressStackedItem"
+    *ngFor="let item of progressStackedCollection.progressStackedItems"
     [attr.aria.valuenow]="item.valueNow"
     [attr.aria.valuemin]="item.valueMin"
     [attr.aria.valuemax]="item.valueMax"
