--- a/src/app/components/cards/card/card.component.html
+++ b/src/app/components/cards/card/card.component.html
@@ -21,5 +21,5 @@
     </ng-template>
   </div>
 
-  <ng-content select="[awCardFooter]" class="card-footer text-muted"></ng-content>
+  <ng-content class="card-footer text-muted" select="[awCardFooter]"></ng-content>
 </div>
