--- a/src/app/components/progress/progress-stacked/progress-stacked.component.html
+++ b/src/app/components/progress/progress-stacked/progress-stacked.component.html
@@ -5,14 +5,14 @@
 <div class="progress-stacked mb-2">
   <div
     *ngFor="let item of progressStackedCollection.progressStackedItems"
-    [attr.aria.valuenow]="item.valueNow"
-    [attr.aria.valuemin]="item.valueMin"
-    [attr.aria.valuemax]="item.valueMax"
+    [attr.aria-valuemax]="item.valueMax"
+    [attr.aria-valuemin]="item.valueMin"
+    [attr.aria-valuenow]="item.valueNow"
     [ngStyle]="{ width: item.percent + '%' }"
+    aria-label="Segment one"
     class="progress"
-    role="progressbar"
-    aria-label="Segment one">
-    <div awTooltip [title]="item.tooltip" [ngClass]="item.background" class="progress-bar">
+    role="progressbar">
+    <div [ngClass]="item.background" [title]="item.tooltip" awTooltip class="progress-bar">
       {{ item.content }}
     </div>
   </div>
