--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -60,8 +60,8 @@
       <aw-btn-loading
         [loading]="loading"
         btnClass="btn btn-success mt-2"
-        btnText="Crear"
-        btnIcon="fa-solid fa-list-check"></aw-btn-loading>
+        btnIcon="fa-solid fa-list-check"
+        btnText="Crear"></aw-btn-loading>
 
       <button [routerLink]="siteUrls.companyTasks.list" class="btn btn-primary mt-2 ms-2" type="button">
         <span class="fa-solid fa-chevron-left"></span> Volver
