--- a/src/app/views/errors/error404/error404.component.html
+++ b/src/app/views/errors/error404/error404.component.html
@@ -3,10 +3,10 @@
     <div class="row align-items-center justify-content-center vh-100">
       <div class="col-lg-6 m-auto text-center shadow-sm">
         <div class="my-5">
-          <img src="assets/images/404.jpg" alt="logo" width="100%" />
+          <img src="assets/images/404.jpg" alt="logo" width="400" />
         </div>
 
-        <h2>Pagina no encontrada</h2>
+        <h2>Página no encontrada</h2>
 
         <span class="h1 text-info">:(</span>
       </div>
