Fix ngmodel change al cambiar de fecha en el calendario

--- a/src/app/components/selectors/month-selector/month-selector.component.html
+++ b/src/app/components/selectors/month-selector/month-selector.component.html
@@ -1,9 +1,9 @@
 <input
-  (ngModelChange)="handleChange()"
+  (ngModelChange)="handleChange($event)"
   (onShown)="handleOpenCalendar($event)"
   [(ngModel)]="dateSelected"
   [bsConfig]="bsConfig"
   autocomplete="off"
   bsDatepicker
   class="form-control"
-  name="date"/>
+  name="date" />
