--- a/src/app/views/times-control/times-control.component.html
+++ b/src/app/views/times-control/times-control.component.html
@@ -7,17 +7,21 @@
       [dateSelected]="dateSelected"></aw-month-selector>
 
     <div class="d-flex mt-4">
+      <!-- state -->
       <ng-container *ngIf="currentTimeControl()?.timeState === timeStates.open">
         <aw-dot-success></aw-dot-success>
-        <span>
+        <span class="small text-muted">
           Tiempo iniciado: <strong>{{ currentTimeControl()?.start | datetimeFormat: "cccc t" }}</strong>
         </span>
       </ng-container>
 
       <ng-container *ngIf="currentTimeControl()?.timeState === timeStates.close">
         <aw-dot-danger></aw-dot-danger>
-        <span>El tiempo esta finalizado</span>
+        <span class="small text-muted">El tiempo esta finalizado</span>
       </ng-container>
+      <!-- end state -->
+
+      <div class="ms-auto small text-muted">Tiempo total: {{ timeTotalInMonth }}</div>
 
       <!-- button state -->
       <div class="ms-auto justify-content-center">
