--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -18,7 +18,9 @@
             <tab #tabTasks="tab" heading="Tareas">
               <aw-employee-tasks *ngIf="tabTasks.active"></aw-employee-tasks>
             </tab>
-            <tab #tabB="tab" heading="Basic Title 1">Basic content 1</tab>
+            <tab #tabTimeControl="tab" heading="Control de tiempos">
+              <aw-employee-time-control *ngIf="tabTimeControl.active"></aw-employee-time-control>
+            </tab>
             <tab #tabC="tab" heading="Basic Title 2">Basic content 2</tab>
           </tabset>
         </div>
