--- a/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
+++ b/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
@@ -2,13 +2,13 @@
   <h3 class="m-auto">Control de tiempos</h3>
 </div>
 
-<div class="my-4">
+<div class="my-3">
   <aw-month-selector
     (changeMonthSelected)="handleDateSelected($event)"
     [dateSelected]="dateSelected"></aw-month-selector>
 </div>
 
-<div>
+<div class="d-flex my-3">
   <div class="ms-auto small text-muted">Tiempo total: {{ timeTotalInMonth }}</div>
 </div>
 
