--- a/src/app/views/company-settings/company-settings.component.html
+++ b/src/app/views/company-settings/company-settings.component.html
@@ -1,3 +1,3 @@
 <aw-view-base>
-  <p>company-settings works!</p>
+  <aw-view-header>Configuración {{ companyName }}</aw-view-header>
 </aw-view-base>
