--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -1,3 +1,16 @@
 <aw-view-base>
-  <aw-view-header>Configuración {{ companyName }}</aw-view-header>
+  <aw-view-header>Configuración - {{ companyName }}</aw-view-header>
+
+  <aw-card>
+    <button class="mb-3 btn btn-sm btn-outline-success"><span class="fa-solid fa-pencil"></span> Editar</button>
+
+    <table class="table table-striped table-borderless">
+      <thead>
+        <tr>
+          <th>Zona horaria</th>
+          <td>{{ companySettings()?.timezone }}</td>
+        </tr>
+      </thead>
+    </table>
+  </aw-card>
 </aw-view-base>
