--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -1,9 +1,11 @@
 <aw-view-base>
-  <aw-view-header>Configuración - {{ companyName }}</aw-view-header>
+  <aw-view-header [breadcrumb]="breadcrumb">Configuración - {{ companyName }}</aw-view-header>
 
   <aw-card>
     <ng-container *ngIf="!loadingCompanySettings()">
-      <button class="mb-3 btn btn-sm btn-outline-success"><span class="fa-solid fa-pencil"></span> Editar</button>
+      <a [routerLink]="[siteUrls.companySettings.edit]" class="mb-3 btn btn-sm btn-outline-success">
+        <span class="fa-solid fa-pencil"></span> Editar
+      </a>
 
       <table class="table table-striped table-borderless">
         <thead>
@@ -12,7 +14,7 @@
               Zona horaria
               <aw-tooltip-info content="Prueba de tooltip" cssClass="text-info"></aw-tooltip-info>
             </th>
-            <td>({{ companySettings()?.timezone }}) {{ timezoneInfo?.currentTimeFormat }}</td>
+            <td>{{ companySettings()?.timezone }} - {{ nowWithTimezone }}</td>
           </tr>
         </thead>
       </table>
