--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -1,5 +1,5 @@
 <aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Configuración - {{ companyName }}</aw-view-header>
+  <aw-view-header [breadcrumb]="breadcrumb">Configuración</aw-view-header>
 
   <aw-card>
     <ng-container *ngIf="!loadingCompanySettings()">
