Camiado roles iguales al backend

--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -84,7 +84,7 @@
               </span>
 
               <!-- add or remove role rrhh -->
-              <span [awRequiredRole]="roles.enterpriseAdministrator" class="ms-auto">
+              <span [awRequiredRole]="roles.enterpriseAdmin" class="ms-auto">
                 <ng-container *ngIf="isHumanResources && !isEnterpriseAdministrator">
                   <aw-btn-loading
                     (click)="handleRemoveRoleRrhh()"
