Anadidas reglas de asignar roles al empleado

--- a/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -12,47 +12,52 @@
   <div class="modal-body">
     <div class="form-check form-switch">
       <input
+        (ngModelChange)="handChangeValue(roles.enterpriseAdmin, $event)"
         [(ngModel)]="isEnterpriseAdmin"
         [checked]="isEnterpriseAdmin"
         [disabled]="true"
+        #name
         class="form-check-input"
         id="role-admin"
         role="switch"
-        type="checkbox"/>
+        type="checkbox" />
       <label class="form-check-label" for="role-admin">Administrador</label>
     </div>
 
     <div class="form-check form-switch">
       <input
+        (ngModelChange)="handChangeValue(roles.enterpriseStaff, $event)"
         [(ngModel)]="isEnterpriseStaff"
         [checked]="isEnterpriseStaff"
         class="form-check-input"
         id="role-staff"
         role="switch"
-        type="checkbox"/>
+        type="checkbox" />
       <label class="form-check-label" for="role-staff">Staff</label>
     </div>
 
     <div class="form-check form-switch">
       <input
+        (ngModelChange)="handChangeValue(roles.humanResources, $event)"
         [(ngModel)]="isHumanResources"
         [checked]="isHumanResources"
         class="form-check-input"
         id="role-rrhh"
         role="switch"
-        type="checkbox"/>
+        type="checkbox" />
       <label class="form-check-label" for="role-rrhh">Recursos Humanos</label>
     </div>
 
     <div class="form-check form-switch">
       <input
+        (ngModelChange)="handChangeValue(roles.employee, $event)"
         [(ngModel)]="isEmployee"
         [checked]="isEmployee"
         [disabled]="true"
         class="form-check-input"
         id="role-employee"
         role="switch"
-        type="checkbox"/>
+        type="checkbox" />
       <label class="form-check-label" for="role-employee">Empleado</label>
     </div>
   </div>
