Anadida alerta con informacion de roles

--- a/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -10,6 +10,8 @@
 
   <!-- body -->
   <div class="modal-body">
+    <div class="alert alert-info"><span class="fa-solid fa-circle-info"></span> Los roles son jerárquicos</div>
+
     <div class="form-check form-switch">
       <input
         (ngModelChange)="handChangeValue(roles.enterpriseAdmin, $event)"
