Implementado lista de departments

--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -1,4 +1,4 @@
-<aw-view-base cssContent="container">
+<aw-view-base>
   <aw-view-header [breadcrumb]="breadcrumb">Crear tarea</aw-view-header>
 
   <aw-card>
