--- a/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
+++ b/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
@@ -1,4 +1,4 @@
-<aw-view-base cssContent="container">
+<aw-view-base>
   <aw-view-header [breadcrumb]="breadcrumb">Editar tarea</aw-view-header>
 
   <aw-card>
@@ -76,8 +76,8 @@
           [loading]="loadingForm"
           btnClass="btn btn-success mt-2 ms-2"
           btnIcon="fa-regular fa-floppy-disk"
-          spinnerLoadingText="Guardando"
-          btnText="Guardar"></aw-btn-loading>
+          btnText="Guardar"
+          spinnerLoadingText="Guardando"></aw-btn-loading>
       </form>
     </ng-container>
     <!-- end form -->
