--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -12,9 +12,9 @@
 
       <span>
         <aw-table-input-search
-          [tableHeaderConfig]="tableHeaderConfig"
+          (clickClean)="handleClickClean($event)"
           [apiResult]="apiResult"
-          (clickClean)="handleClickClean($event)"></aw-table-input-search>
+          [tableHeaderConfig]="tableHeaderConfig"></aw-table-input-search>
       </span>
     </div>
     <!-- end toolbar -->
@@ -23,14 +23,14 @@
     <aw-table [apiResult]="apiResult" [loading]="loading">
       <thead awThead>
         <tr
-          awTableHeader
-          [tableHeaderConfig]="tableHeaderConfig"
+          (clickOrdering)="handleReloadData()"
           [apiResult]="apiResult"
-          (clickOrdering)="handleReloadData()"></tr>
+          [tableHeaderConfig]="tableHeaderConfig"
+          awTableHeader></tr>
       </thead>
 
-      <tbody awTbody *ngIf="apiResult">
-        <tr *ngFor="let task of apiResult.items" (click)="handleSelectItem(task)" class="cursor-pointer">
+      <tbody *ngIf="apiResult" awTbody>
+        <tr (click)="handleSelectItem(task)" *ngFor="let task of apiResult.items" class="cursor-pointer">
           <td>
             <aw-badge [background]="task.background" [color]="task.color" [name]="task.name"></aw-badge>
           </td>
@@ -49,10 +49,10 @@
 
     <!-- pagination -->
     <aw-pagination
-      *ngIf="apiResult"
-      [apiResult]="apiResult"
       (changePage)="handleReloadData()"
-      (changePageListNumber)="handleReloadData()">
+      (changePageListNumber)="handleReloadData()"
+      *ngIf="apiResult"
+      [apiResult]="apiResult">
     </aw-pagination>
     <!-- end pagination -->
   </aw-card>
