Anadido el estado de sidebar en localstorage

--- a/src/app/views/departments/department-view/department-view.component.html
+++ b/src/app/views/departments/department-view/department-view.component.html
@@ -5,9 +5,11 @@
   </aw-view-header>
   <!-- end header -->
 
-  <!-- employee details -->
-  <ng-container *ngIf="departmentSelected()"> </ng-container>
-  <!-- end employee details -->
+  <!-- department details -->
+  <ng-container *ngIf="departmentSelected()">
+    <aw-department-details></aw-department-details>
+  </ng-container>
+  <!-- end department details -->
 
   <!-- tabs -->
   <ng-container *ngIf="departmentSelected()">
