--- a/src/app/components/views/view-header/view-header.component.html
+++ b/src/app/components/views/view-header/view-header.component.html
@@ -1,6 +1,9 @@
 <aw-card>
   <h3>
     <ng-content></ng-content>
+    <span class="fs-5">
+      <ng-content select="[awHeaderSubtitle]"></ng-content>
+    </span>
   </h3>
 
   <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
