--- a/src/app/views/departments/department-view/department-view.component.html
+++ b/src/app/views/departments/department-view/department-view.component.html
@@ -1,7 +1,7 @@
 <aw-view-base>
   <!-- header -->
   <aw-view-header [breadcrumb]="breadcrumb">
-    Departamento - <span class="fs-5">{{ departmentSelected()?.name }}</span>
+    Departamento - <span awHeaderSubtitle>{{ departmentSelected()?.name }}</span>
   </aw-view-header>
   <!-- end header -->
 
