--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -8,7 +8,7 @@
       <aw-dot-danger></aw-dot-danger>
     </ng-container>
 
-    Empleado - <span class="fs-5">{{ employeeSelected()?.firstName }} {{ employeeSelected()?.lastName }}</span>
+    Empleado - <span awHeaderSubtitle>{{ employeeSelected()?.firstName }} {{ employeeSelected()?.lastName }}</span>
   </aw-view-header>
   <!-- end header -->
 
